kubernetes/demoApp/k8s_manifest/deployment_api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-api
  namespace: demo-app
  labels:
    app: test-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-api
  template:
    metadata:
      labels:
        app: test-api
    spec:
      containers:
      - name: my-fastapi-app
        image: cosmoincorp/demo:my-fastapi-app
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: mynginxvolume
          mountPath: /dev/oracleoci/oraclevdb  # You can change this path as needed
      volumes:
      - name: mynginxvolume
        persistentVolumeClaim:
          claimName: mynginxclaim-5gi

---
apiVersion: v1
kind: Service
metadata: 
  name: svc-ms-test-api
  namespace: demo-app
spec:
    ports:
    - name: portapi
      port: 80
      protocol: TCP
      targetPort: 8000
    selector:
      app: test-api
    type: NodePort
